[gd_scene load_steps=82 format=3 uid="uid://ckxkkjgb4u2yi"]

[ext_resource type="PackedScene" uid="uid://ti57wti5jlrd" path="res://characters/character.tscn" id="1_qnami"]
[ext_resource type="Script" path="res://components/hurt_box.gd" id="2_mlw8g"]
[ext_resource type="Script" path="res://controllers/hit_box.gd" id="3_xy7vw"]
[ext_resource type="Shader" path="res://blue_to_red.gdshader" id="4_62llk"]
[ext_resource type="Texture2D" uid="uid://cs076rvdbivw" path="res://assets/ThreeEnemies/Shock Sweeper/slam with VFX.png" id="4_fmdim"]
[ext_resource type="Texture2D" uid="uid://uepq3xg8psdo" path="res://assets/ThreeEnemies/Shock Sweeper/wake.png" id="4_vche0"]
[ext_resource type="Texture2D" uid="uid://br6lvfpwemaqe" path="res://assets/ThreeEnemies/Shock Sweeper/shuffe(move).png" id="5_gg8yt"]
[ext_resource type="Texture2D" uid="uid://c4nbq61fn4r38" path="res://assets/ThreeEnemies/Shock Sweeper/death.png" id="5_hjh2a"]
[ext_resource type="Texture2D" uid="uid://c4cf1acyjg5ck" path="res://assets/ThreeEnemies/Shock Sweeper/hit.png" id="5_sgdd8"]
[ext_resource type="Texture2D" uid="uid://cw8gpegvw06dx" path="res://assets/ThreeEnemies/Shock Sweeper/Sweep with VFX.png" id="6_kcaon"]
[ext_resource type="AnimationLibrary" uid="uid://co8bi35r5sp1c" path="res://characters/pickeman/pickeman_anims.res" id="9_q01do"]
[ext_resource type="AudioStream" uid="uid://dloxn3aaqe67p" path="res://assets/sounds/Pickeman_attack.wav" id="16_0htuf"]
[ext_resource type="AudioStream" uid="uid://b2gaphqyox35u" path="res://assets/sounds/hitsound.wav" id="17_jdjmv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljkjx"]
size = Vector2(22, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yn8ym"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f7cnd"]
size = Vector2(44, 25)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n3f8a"]
shader = ExtResource("4_62llk")
shader_parameter/is_hurt = false

[sub_resource type="AtlasTexture" id="AtlasTexture_06yt3"]
atlas = ExtResource("4_fmdim")
region = Rect2(0, 0, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6xby"]
atlas = ExtResource("4_fmdim")
region = Rect2(0, 30, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt4u4"]
atlas = ExtResource("4_fmdim")
region = Rect2(0, 60, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cxau"]
atlas = ExtResource("4_fmdim")
region = Rect2(0, 90, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wo4o1"]
atlas = ExtResource("4_fmdim")
region = Rect2(0, 120, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_inhej"]
atlas = ExtResource("4_fmdim")
region = Rect2(0, 150, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w4n2"]
atlas = ExtResource("4_fmdim")
region = Rect2(0, 180, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3c2ta"]
atlas = ExtResource("4_fmdim")
region = Rect2(0, 210, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bwld"]
atlas = ExtResource("4_fmdim")
region = Rect2(0, 240, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nl6f"]
atlas = ExtResource("4_fmdim")
region = Rect2(0, 270, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0vnf"]
atlas = ExtResource("6_kcaon")
region = Rect2(0, 0, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtcpu"]
atlas = ExtResource("6_kcaon")
region = Rect2(0, 30, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_fp3hu"]
atlas = ExtResource("6_kcaon")
region = Rect2(0, 60, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjyem"]
atlas = ExtResource("6_kcaon")
region = Rect2(0, 90, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2251"]
atlas = ExtResource("6_kcaon")
region = Rect2(0, 120, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_kn2ax"]
atlas = ExtResource("6_kcaon")
region = Rect2(0, 150, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dbx1"]
atlas = ExtResource("6_kcaon")
region = Rect2(0, 180, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhlp2"]
atlas = ExtResource("6_kcaon")
region = Rect2(0, 210, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3ib0"]
atlas = ExtResource("5_hjh2a")
region = Rect2(0, 0, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_cltn1"]
atlas = ExtResource("5_hjh2a")
region = Rect2(0, 30, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqcow"]
atlas = ExtResource("5_hjh2a")
region = Rect2(0, 60, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_1usiq"]
atlas = ExtResource("5_hjh2a")
region = Rect2(0, 90, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx83f"]
atlas = ExtResource("5_hjh2a")
region = Rect2(0, 120, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_es273"]
atlas = ExtResource("5_sgdd8")
region = Rect2(0, 0, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6t7b"]
atlas = ExtResource("5_sgdd8")
region = Rect2(0, 30, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcjv8"]
atlas = ExtResource("4_vche0")
region = Rect2(0, 0, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv3pe"]
atlas = ExtResource("4_vche0")
region = Rect2(0, 30, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjfi4"]
atlas = ExtResource("4_vche0")
region = Rect2(0, 60, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_80h2r"]
atlas = ExtResource("4_vche0")
region = Rect2(0, 90, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp7cu"]
atlas = ExtResource("4_vche0")
region = Rect2(0, 120, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_14pp8"]
atlas = ExtResource("4_vche0")
region = Rect2(0, 150, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_carog"]
atlas = ExtResource("5_gg8yt")
region = Rect2(0, 0, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_faj0p"]
atlas = ExtResource("5_gg8yt")
region = Rect2(0, 30, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7tiw"]
atlas = ExtResource("5_gg8yt")
region = Rect2(0, 60, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1rds"]
atlas = ExtResource("5_gg8yt")
region = Rect2(0, 90, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtk6l"]
atlas = ExtResource("5_gg8yt")
region = Rect2(0, 120, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_74018"]
atlas = ExtResource("5_gg8yt")
region = Rect2(0, 150, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_wou0i"]
atlas = ExtResource("5_gg8yt")
region = Rect2(0, 180, 88, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4gso"]
atlas = ExtResource("5_gg8yt")
region = Rect2(0, 210, 88, 30)

[sub_resource type="SpriteFrames" id="SpriteFrames_vvi4k"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_06yt3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6xby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt4u4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cxau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wo4o1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inhej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w4n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3c2ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bwld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nl6f")
}],
"loop": false,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0vnf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtcpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fp3hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjyem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2251")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kn2ax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dbx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhlp2")
}],
"loop": false,
"name": &"Attack_2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3ib0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cltn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqcow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1usiq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx83f")
}],
"loop": false,
"name": &"Death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_es273")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6t7b")
}],
"loop": false,
"name": &"Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcjv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv3pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjfi4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80h2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp7cu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14pp8")
}],
"loop": true,
"name": &"Idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_carog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_faj0p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7tiw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1rds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtk6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74018")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wou0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4gso")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_2dtcl"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pickeman/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pickeman/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack_2"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_angbq"]
_data = {
"Attack_2": SubResource("Animation_2dtcl")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8hkib"]
animation = &"pickeman_anims/Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_e1842"]
animation = &"Attack_2"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_fuwmq"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8hkib")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_e1842")
blend_point_1/pos = 1.0
min_space = 0.0
value_label = "animation"
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gtd8y"]
animation = &"pickeman_anims/Death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pmx5x"]
animation = &"pickeman_anims/Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gwmc4"]
animation = &"pickeman_anims/Run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lsawd"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_u7ly2"]
advance_mode = 2
advance_condition = &"running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fc6ll"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qe7e2"]
advance_mode = 2
advance_condition = &"shooting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qfn61"]
advance_mode = 2
advance_condition = &"shooting"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2wuwm"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ioucn"]
advance_mode = 2
advance_condition = &"running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_a1yu2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j8cq0"]
advance_mode = 2
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vcecx"]
advance_mode = 2
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_h0qak"]
advance_mode = 2
advance_condition = &"attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xa2qm"]
switch_mode = 2
advance_mode = 2
advance_condition = &"running"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0xqq1"]
switch_mode = 2
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mbgac"]
advance_mode = 2
advance_condition = &"attacking"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hmrvg"]
advance_mode = 2
advance_condition = &"dead"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_7bety"]
states/Attack/node = SubResource("AnimationNodeBlendSpace1D_fuwmq")
states/Attack/position = Vector2(519.13, 375.585)
states/Death/node = SubResource("AnimationNodeAnimation_gtd8y")
states/Death/position = Vector2(-17.1808, 353.196)
states/End/position = Vector2(964, 126)
states/Idle/node = SubResource("AnimationNodeAnimation_pmx5x")
states/Idle/position = Vector2(180.268, -39.3181)
states/Run/node = SubResource("AnimationNodeAnimation_gwmc4")
states/Run/position = Vector2(608.893, 155.744)
states/Shoot/node = SubResource("AnimationNodeAnimation_lsawd")
states/Shoot/position = Vector2(609.461, -39.6146)
states/Start/position = Vector2(-24, -38.0745)
transitions = ["Idle", "Run", SubResource("AnimationNodeStateMachineTransition_u7ly2"), "Run", "Idle", SubResource("AnimationNodeStateMachineTransition_fc6ll"), "Idle", "Shoot", SubResource("AnimationNodeStateMachineTransition_qe7e2"), "Run", "Shoot", SubResource("AnimationNodeStateMachineTransition_qfn61"), "Shoot", "Idle", SubResource("AnimationNodeStateMachineTransition_2wuwm"), "Shoot", "Run", SubResource("AnimationNodeStateMachineTransition_ioucn"), "Start", "Idle", SubResource("AnimationNodeStateMachineTransition_a1yu2"), "Idle", "Death", SubResource("AnimationNodeStateMachineTransition_j8cq0"), "Run", "Death", SubResource("AnimationNodeStateMachineTransition_vcecx"), "Run", "Attack", SubResource("AnimationNodeStateMachineTransition_h0qak"), "Attack", "Run", SubResource("AnimationNodeStateMachineTransition_xa2qm"), "Attack", "Idle", SubResource("AnimationNodeStateMachineTransition_0xqq1"), "Idle", "Attack", SubResource("AnimationNodeStateMachineTransition_mbgac"), "Attack", "Death", SubResource("AnimationNodeStateMachineTransition_hmrvg")]
graph_offset = Vector2(-238.87, 218.585)

[node name="Pickeman" instance=ExtResource("1_qnami")]

[node name="Hurtbox" type="Area2D" parent="." index="0" node_paths=PackedStringArray("agent", "health_component")]
collision_layer = 0
collision_mask = 2
script = ExtResource("2_mlw8g")
agent = NodePath("..")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_ljkjx")
debug_color = Color(6.73831e-07, 0.633822, 0.436113, 0.42)

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_yn8ym")

[node name="HitBox" type="Area2D" parent="CollisionShape2D" index="0" node_paths=PackedStringArray("agent", "damage_component")]
collision_layer = 4
collision_mask = 0
script = ExtResource("3_xy7vw")
agent = NodePath("../..")
damage_component = NodePath("../../DamageComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D/HitBox" index="0"]
position = Vector2(12, -7.5)
shape = SubResource("RectangleShape2D_f7cnd")
disabled = true

[node name="AnimatedSprite2D" parent="." index="2"]
material = SubResource("ShaderMaterial_n3f8a")
position = Vector2(16, -15)
sprite_frames = SubResource("SpriteFrames_vvi4k")
animation = &"Idle"
frame = 1
metadata/_edit_lock_ = true

[node name="HealthComponent" parent="." index="3" node_paths=PackedStringArray("agent")]
agent = NodePath("..")

[node name="DamageComponent" parent="." index="4" node_paths=PackedStringArray("damage_causer")]
damage_causer = NodePath("..")

[node name="AnimationPlayer" parent="." index="5"]
libraries = {
"": SubResource("AnimationLibrary_angbq"),
"pickeman_anims": ExtResource("9_q01do")
}

[node name="AnimationTree" parent="." index="6"]
tree_root = SubResource("AnimationNodeStateMachine_7bety")
parameters/conditions/attacking = false
parameters/conditions/dead = false
parameters/conditions/idle = false
parameters/conditions/running = false
parameters/conditions/shooting = false
parameters/Attack/blend_position = 0.00186916

[node name="LimboHSM" parent="." index="7" node_paths=PackedStringArray("character", "animation_tree")]
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")
state_conditions = {
"got_hit": "parameters/conditions/got_hit"
}

[node name="Idle" type="LimboState" parent="LimboHSM" index="0"]

[node name="Run" type="LimboState" parent="LimboHSM" index="1"]

[node name="Attack" type="LimboState" parent="LimboHSM" index="2"]

[node name="Death" type="LimboState" parent="LimboHSM" index="3"]

[node name="Sounds" type="Node2D" parent="." index="8"]

[node name="AttackSound" type="AudioStreamPlayer2D" parent="Sounds" index="0"]
stream = ExtResource("16_0htuf")
volume_db = -10.0
bus = &"SFX"

[node name="HitSound" type="AudioStreamPlayer2D" parent="Sounds" index="1"]
stream = ExtResource("17_jdjmv")
volume_db = -20.0
pitch_scale = 0.7
bus = &"SFX"
